<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sfu.timr.portandstarboard.MainActivity">

    <Button
        android:text="@string/show_left_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/showLeftButton" />

    <Button
        android:text="@string/show_right_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/showRightButton" />

    <TextView
        android:text="Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quizQuestion"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <TextView
        android:text="@string/quiz_question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:id="@+id/quizQuestionTitle"
        android:layout_above="@+id/quizQuestion"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:text="@string/means_left_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/answerButtonLeft" />

    <Button
        android:text="@string/means_right_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/answerButtonRight" />

    <TextView
        android:text="@string/title_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
